2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (print_attributes): Lift left function to...
	(left): ...here. New file scope function taking Elf_Data and char
	pointers.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (handle_core_registers): Lift same_set function to...
	(same_set): ...here. New file scope function adding regs and
	maxnreg arguments.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (parse_opt): Lift add_dump_section function to...
	(add_dump_section): ...here. New top level function. Added key
	argument.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* arlib-argp.c (help_filter): Lift text_for_default function to...
	(text_for_default): ... here. New file scope function taking text
	as argument.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* addr2line.c (handle_address): Move show_note and show_int up to
	file scope.
	(show_note: New static inline function.
	(show_int): Likewise.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* strip.c (handle_elf): Remove no_symtab_updates function and
	calls inside the switch statement. Add checks and (possibly)
	continue, before switch statement is called.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* strip.c (handle_elf): Move inlined update_section_size function
	to...
	(update_section_size): ...here. New static function that takes as
	extra arguments the Elf_Scn, debug_elf, section cnt and fname.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* strip.c (remove_debug_relocations): Rewrite inlined relocate
	function to file static. Do R_*_NONE, reloc_simple_type and
	ebl_debug_scn_p checks before calling new relocate function.
	(relocate): New file static function from
	remove_debug_relocate. Remove R_*_NONE, reloc_simple_type and
	ebl_debugscn_p checks.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* strip.c (handle_elf): Expand inlined function check_preserved.

2021-01-12  Mark Wielaard  <mark@klomp.org>

	* elflint.c (EXTRA_SHFLAGS): New define.