@@ -1,5 +1,11 @@
 2021-01-08  Timm Bäder  <tbaeder@redhat.com>
 
+	* readelf.c (print_cfa_program): Lift regname function to...
+	(regname): ...here. New file scope function add ebl and regnamebuf
+	as arguments.
+
+2021-01-08  Timm Bäder  <tbaeder@redhat.com>
+
 	* readelf.c (print_attributes): Lift left function to...
 	(left): ...here. New file scope function taking Elf_Data and char
 	pointers.
